:bug: Fix home icon in login page

--- a/frontend/resources/styles/main/layouts/login.scss
+++ b/frontend/resources/styles/main/layouts/login.scss
@@ -43,6 +43,12 @@
       max-width: 11vw;
       height: 80px;
     }
+    .hidden-name {
+      visibility: hidden;
+      width: 0;
+      height: 0;
+      float: left;
+    }
   }
 }
 
