:sparkles: Improve webhook URI validation

--- a/frontend/resources/styles/main/partials/dashboard-team.scss
+++ b/frontend/resources/styles/main/partials/dashboard-team.scss
@@ -199,10 +199,12 @@
       }
     }
 
-    &.uri,
+    &.uri {
+      flex-grow: 1;
+    }
+
     &.active {
-      width: 48%;
-      min-width: 300px;
+      min-width: 100px;
     }
 
     &.last-delivery {
