:bug: Fix missing loading icon on shared libraries

--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -736,6 +736,13 @@
         width: 50px;
         margin-bottom: $size-4;
       }
+
+      & svg#loader-pencil {
+        fill: $color-gray-20;
+        height: 75px;
+        width: 75px;
+        margin-bottom: $size-4;
+      }
     }
 
     .libraries-search {
