:sparkles: Reorder layers through keys in flex layout

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1841,7 +1841,8 @@
       }
     }
 
-    .padding-icons, .margin-item-icons {
+    .padding-icons,
+    .margin-item-icons {
       margin-bottom: 8px;
       margin-top: 3px;
       margin-right: 1px;
