:recycle: Changed handoff for inspect everywhere

--- a/frontend/resources/styles/main/partials/inspect.scss
+++ b/frontend/resources/styles/main/partials/inspect.scss
@@ -4,7 +4,7 @@
 //
 // Copyright (c) KALEIDOS INC
 
-.handoff-svg-wrapper {
+.inspect-svg-wrapper {
   width: 100%;
   height: 100%;
   display: flex;
