--- a/frontend/resources/styles/main/layouts/inspect.scss
+++ b/frontend/resources/styles/main/layouts/inspect.scss
@@ -1,7 +1,7 @@
 $width-left-toolbar: 48px;
 $width-settings-bar: 256px;
 
-.handoff-layout {
+.inspect-layout {
   height: 100vh;
   display: grid;
   grid-template-rows: 48px auto;
@@ -19,7 +19,7 @@ $width-settings-bar: 256px;
   }
 }
 
-.fullscreen.handoff-layout.force-visible {
+.fullscreen.inspect-layout.force-visible {
   display: grid;
   grid-template-rows: 1fr;
 
@@ -39,7 +39,7 @@ $width-settings-bar: 256px;
   }
 }
 
-.fullscreen.handoff-layout:not(.force-visible) {
+.fullscreen.inspect-layout:not(.force-visible) {
   & .viewer-header {
     width: 100%;
     position: fixed;
@@ -91,7 +91,7 @@ $width-settings-bar: 256px;
   }
 }
 
-.handoff-layout {
+.inspect-layout {
   .viewer-section {
     flex-wrap: nowrap;
     margin-top: 0;
@@ -124,14 +124,14 @@ $width-settings-bar: 256px;
     }
   }
 
-  .handoff-svg-wrapper {
+  .inspect-svg-wrapper {
     flex: 1;
     overflow: hidden;
     flex-direction: column;
     justify-content: flex-start;
   }
 
-  .handoff-svg-container {
+  .inspect-svg-container {
     display: grid;
     width: 100%;
     height: 100%;
