--- a/frontend/resources/styles/main/partials/context-menu.scss
+++ b/frontend/resources/styles/main/partials/context-menu.scss
@@ -48,6 +48,7 @@
   color: $color-black;
   display: block;
   font-size: $fs14;
+  font-weight: 400;
   padding: $size-2 $size-4;
   text-align: left;
   white-space: nowrap;
