:bug: Show color name on inspect

--- a/frontend/resources/styles/main/partials/color-bullet.scss
+++ b/frontend/resources/styles/main/partials/color-bullet.scss
@@ -184,6 +184,7 @@ ul.palette-menu .color-bullet {
 
 .color-bullet.is-not-library-color {
   border-radius: $br-small;
+  overflow: hidden;
 
   & .color-bullet-wrapper {
     clip-path: none;
