--- a/frontend/resources/styles/main/partials/context-menu.scss
+++ b/frontend/resources/styles/main/partials/context-menu.scss
@@ -56,6 +56,7 @@
   &:hover {
     color: $color-black;
     background-color: $color-primary-lighter;
+    text-decoration: none;
   }
 
   &.submenu {
