:bug: Fix pin icon in project

--- a/frontend/resources/styles/main/partials/dashboard-header.scss
+++ b/frontend/resources/styles/main/partials/dashboard-header.scss
@@ -124,6 +124,8 @@
 
   .pin-icon {
     margin: 0 $size-2 0 $size-5;
+    background-color: transparent;
+    border: none;
     svg {
       fill: $color-gray-20;
     }
