:bug: Fix share prototype styles on hover: color and tooltip

--- a/frontend/resources/styles/main/partials/viewer-header.scss
+++ b/frontend/resources/styles/main/partials/viewer-header.scss
@@ -76,6 +76,11 @@
           display: none;
         }
       }
+      &:hover {
+        svg {
+          fill: #b1b2b5;
+        }
+      }
     }
 
     .view-options {
