:lipstick: Improve warning message css in fonts

--- a/frontend/resources/styles/main/partials/dashboard-fonts.scss
+++ b/frontend/resources/styles/main/partials/dashboard-fonts.scss
@@ -132,6 +132,7 @@
     .options {
       display: flex;
       justify-content: flex-end;
+      min-width: 180px;
 
       .icon {
         width: $size-5;
