:bug: Fix onboarding poll

--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -801,6 +801,7 @@
   background-color: $color-white;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
   display: flex;
+  max-height: 710px;
   min-height: 420px;
   flex-direction: row;
   font-family: "sourcesanspro", sans-serif;
