added width property to avoid shrinking on icons

--- a/frontend/resources/styles/main/partials/modal.scss
+++ b/frontend/resources/styles/main/partials/modal.scss
@@ -1403,6 +1403,7 @@
           align-items: center;
           justify-content: center;
           background: #31efb8;
+          min-width: 28px;
           width: 28px;
           height: 28px;
           border-radius: 50%;
